# freertos-demo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh  cmake_build.sh  dependencies.cmake
cmake/: pic32mz_toolchain.cmake  win32_mingw_toolchain.cmake
demo/: CMakeLists.txt  hello.cpp
examples/Posix_GCC/: FreeRTOSConfig.h
fips/fip-pic32mz2048efm144/: CMakeLists.txt  main.c  main_blinky.c
fips/fip-posix-gcc/: CMakeLists.txt  FreeRTOSConfig.h  console.c  console.h  main.c
fips/fip-win32-mingw/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/blink/: CMakeLists.txt  FreeRTOSConfig.h
src/blinky/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/pic32mz/: CMakeLists.txt
src/demos/posix/: FreeRTOSConfig.h  main.c
src/demos/win32/: CMakeLists.txt  Makefile  build.sh  main.c
src/examples/: CMakeLists.txt
src/examples/blinky/: blinky.c
src/examples/pic32mz/: CMakeLists.txt
src/examples/posix/: CMakeLists.txt
src/examples/win32/: CMakeLists.txt
src/hello/: CMakeLists.txt  FreeRTOSConfig.h  hello.cpp
src/pic32mz/: CMakeLists.txt
src/posix/: CMakeLists.txt  build.sh  main.c
src/win32/: CMakeLists.txt
